<resources>
    <string name="app_name">SMT</string>
    <string name="splash_text">Song My Tuner</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="songs">Songs</string>
    <string name="tuner">Tuner</string>
    <string name="settings_user">User Settings</string>
    <string name="login">Login\n</string>
    <string name="my_added_songs">My Added Songs</string>
    <string name="settings_about_us">About us</string>
    <string name="about_app">About SMT</string>
    <string name="privacy">Privacy</string>
    <string name="template_card">template card</string>
    <string name="coming_soon">coming soon</string>
    <string name="user">User</string>
    <string name="about_smt">About SMT</string>
    <string name="app_version_placeholder">Version Placehoder</string>
    <string name="select_tuning">Select tuning</string>
    <string name="mic_permission">Mic permission required</string>
    <string name="practice_reminder">Practice reminder</string>
    <string name="search_artist_band">Search artist/band</string>
    <string name="add">Add</string>
</resources>